Descrição das alterações

--- a/backup.html
+++ b/backup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Textinho de hj</title>
+  <title>Textinho de hoje</title>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     * { box-sizing: border-box; }
@@ -98,7 +98,7 @@
     <div class="screen" id="homeScreen">
       <h1>Love Xanda</h1>
       <p>Vamos lá, experimente isso, pressione o fundo do celular e haverá várias músicas, pressione o fundo rosa para a música do Cupido 😊</p>
-      <button class="start-btn" onclick="clickAndGo('game.html')">Autism ksksks✨</button>
+      <button class="start-btn" onclick="clickAndGo('game.html')">Experimente ✨</button>
       <button class="start-btn" onclick="clickAndGo('textito.html')">Textinho 😚</button>
       <button class="start-btn" onclick="clickAndGo('galeri.html')">Galeria Minha Rainha 💖</button>
       <button class="start-btn" onclick="clickAndGo('cobrita.html')">Joguito pq vc gosta de joguitos 🤳</button>
