--- a/galeri.html
+++ b/galeri.html
@@ -243,9 +243,8 @@
       <button class="like-btn" onclick="love(this)">❤️</button>
     </div>
     <div class="nav-btns">
-      <button class="btn" onclick="playClick(); nextPhoto()">Next Foto ➡️</button>
-      <button class="btn" onclick="playClick(); randomPhoto()">Random Foto 🎲</button>
-      <button class="btn" onclick="playClick(); kembaliToHp()">Kembali ke Hp</button>
+      <button class="btn" onclick="playClick(); nextPhoto()">Proxima foto ➡️</button>
+      <button class="btn" onclick="playClick(); kembaliToHp()">Voltar ao inicio</button>
     </div>
   </section>
 
@@ -312,7 +311,7 @@
     }
 
     function kembaliToHp() {
-      window.location.href = "awalan.html";
+      window.location.href = "backup.html";
     }
 
     function playClick() {
