--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Love 💖</title>
+  <title>Autism 💖</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
     * {
@@ -107,7 +107,7 @@
       <div id="dialog">Pressione para começar 💌</div>
       <div id="typing"></div>
     </div>
-    <a href="awalan.html"><button class="back-btn">🔙 De volta ao inicio</button></a>
+    <a href="backup.html"><button class="back-btn">🔙 De volta ao inicio</button></a>
   </div>
 
   <!-- Audio pantun -->
