--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="screen" id="homeScreen">
       <h1>Love Xanda</h1>
       <p>Vamos lá, experimente isso, pressione o fundo do celular e haverá várias músicas, pressione o fundo rosa para a música do Cupido 😊</p>
-      <button class="start-btn" onclick="clickAndGo('game.html')">Autism ksksks✨</button>
+      <!--button class="start-btn" onclick="clickAndGo('game.html')">Autism ksksks✨</button -->
       <button class="start-btn" onclick="clickAndGo('textito.html')">Textinho 😚</button>
       <button class="start-btn" onclick="clickAndGo('galeri.html')">Galeria Minha Rainha 💖</button>
       <button class="start-btn" onclick="clickAndGo('cobrita.html')">Joguito pq vc gosta de joguitos 🤳</button>
