Descrição das alterações

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <div class="phone">
     <div class="screen" id="homeScreen">
       <h1>Love Xanda</h1>
-      <p>Vamos lá, experimente isso, pressione o fundo do celular e haverá várias músicas, pressione o fundo rosa para a música do Cupido 😊</p>
+      <p>oiii, hoje resolvi mudar um pouquinho só como vai funcionar o textinho ksksks, agora vai ser por aqui, fora atualizações que vou a fazer no sitezito, explore! 😊</p>
       <!--button class="start-btn" onclick="clickAndGo('game.html')">Autism ksksks✨</button -->
       <button class="start-btn" onclick="clickAndGo('textito.html')">Textinho 😚</button>
       <button class="start-btn" onclick="clickAndGo('galeri.html')">Galeria Minha Rainha 💖</button>
